[package]
name = "zallet-zebra"
version = "0.1.0-beta.1"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2024"
rust-version = "1.88"
description = "A prototype wallet. Don't rely on this for privacy or with significant funds yet!"
repository = "https://github.com/zcash/zallet"
license = "MIT OR Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
publish = false

# This package is deliberately its own workspace root with its own lockfile, so its
# zebra-* dependency versions can move independently of the zaino backend's
# (librocksdb-sys's `links = "rocksdb"` forbids two zebra-state versions in one
# resolution graph). See https://github.com/zcash/zallet/issues/540.
[workspace]

[[test]]
name = "cli_tests"
required-features = ["zcashd-import"]

[[test]]
name = "zallet_acceptance"
path = "tests/acceptance.rs"

[dependencies]
zallet-core = { path = "../../zallet-core" }

base64 = "0.22"
futures = "0.3"
hex = "0.4"
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
incrementalmerkletree = { version = "0.8.2", features = ["legacy-api"] }
orchard = "0.15.0"
sapling = { package = "sapling-crypto", version = "0.7" }
serde = { version = "1", features = ["serde_derive"] }
jsonrpsee = { version = "0.24", features = ["async-client"] }
jsonrpsee-http-client = { version = "0.24", default-features = false }
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
tower = { version = "0.4", features = ["timeout"] }
transparent = { package = "zcash_transparent", version = "0.9.0" }
zcash_client_backend = "0.24.0-rc.1"
zcash_primitives = "0.29.0"
zcash_protocol = "0.10.0"
zebra-chain = "11"
zebra-rpc = "11"
zebra-state = { version = "10", features = ["indexer"] }

[dev-dependencies]
abscissa_core = { version = "0.9", features = ["testing"] }
age = { version = "0.12", features = ["armor", "cli-common", "plugin"] }
once_cell = "1.2"
regex = "1.4"
tempfile = "3"
trycmd = "0.15"

[features]
default = ["spend-index"]

## Per-outpoint transparent spend detection via Zebra's spend index; always enabled
## for this backend (the cfg exists so the sources track zallet-core's API shape).
spend-index = ["zallet-core/spend-index"]

## Allows `zallet` to import zcashd wallets.
zcashd-import = ["zallet-core/zcashd-import"]

## `zallet rpc` CLI support.
rpc-cli = ["zallet-core/rpc-cli"]

## `tokio-console` support.
tokio-console = ["zallet-core/tokio-console"]

[patch.crates-io]
# Pinned to the prove/pool-migration-transfer branch of librustzcash: the
# pool-migration engine plus its Orchard/Ironwood transfer and preparation
# proving. The repo is a workspace, so pinning the crates we depend on pulls
# their path-dep siblings from git while their crates.io copies remain; pinning
# the whole stack to one rev avoids duplicating it. Replace with the crates.io
# releases once they ship.
equihash = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
f4jumble = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
zcash_client_backend = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
zcash_client_sqlite = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
zcash_transparent = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }
zip321 = { git = "https://github.com/zcash/librustzcash.git", rev = "00ba902c0b756329857036fed4dc9db20ed72bd8" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(tokio_unstable)',
    'cfg(zallet_build, values("merchant_terminal", "wallet"))',
    'cfg(zcash_unstable, values("nu7"))',
] }
