[package]
name = "zallet-zebra-read-state"
version = "0.1.0-alpha.4"
authors = [
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2024"
rust-version = "1.88"
description = "Shared read-only zebra-state construction for Zallet chain backends"
repository = "https://github.com/zcash/zallet"
license = "MIT OR Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
publish = false

# This package is deliberately its own workspace root: it is a path dependency of
# both backend packages and is resolved (and its dependencies patched) within each
# consumer's graph. It is not built standalone.
[workspace]

[dependencies]
tokio = { version = "1", features = ["net", "rt"] }
tracing = "0.1"
zcash_protocol = "0.10.0-pre.0"
zebra-chain = "11"
zebra-rpc = "11"
zebra-state = "10"
